# mfd-typing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/: dependency_review.yml
.github/workflows/: check_code_standard.yml  check_pr_format.yml  codeql.yml  dependency_review.yml  main.yml  manual_release.yml  pull_requests.yml  run_tests.yml
mfd_typing/: network_interface.py
sphinx-doc/: Makefile  README.md  conf.py  generate_docs.py  genindex.rst  index.rst
tests/unit/test_mfd_typing/: test_data_structures.py  test_dataclass_utils.py  test_ip_address.py  test_mac_address.py  test_network_interface.py  test_os_values.py  test_pci_address.py  test_pci_device.py  test_utils.py  test_vendor_device_id.py
